# DRLHSS

./: ANTIVIRUS_INTEGRATION_COMPLETE.md  ANTIVIRUS_QUICK_START.md  CMakeLists.txt  CMakeLists_desktop.txt  CMakeLists_gui.txt  CMakeLists_xai.txt  COMPLETE_GUI_SETUP.md  COMPLETE_INTEGRATION_README.md  COMPLETE_SYSTEM_SUMMARY.md  DEMO_GUIDE.md  DESKTOP_APP_BUILD_GUIDE.md  DESKTOP_APP_COMPLETE.md  DESKTOP_APP_QUICK_START.md  DIREWOLF_ALL_10_PHASES_COMPLETE.md  DIREWOLF_ALL_PHASES_COMPLETE.md  DIREWOLF_COMPLETE_SYSTEM.md  DIREWOLF_FINAL_COMPLETE_SUMMARY.md  DIREWOLF_IMPLEMENTATION_PHASES.md  DIREWOLF_IMPLEMENTATION_STATUS.md  DIREWOLF_PHASE10_COMPLETE.md  DIREWOLF_PHASE10_PRODUCTION_DEPLOYMENT.md  DIREWOLF_PHASE1_COMPLETE.md  DIREWOLF_PHASE2_COMPLETE.md  DIREWOLF_PHASE3_COMPLETE.md  DIREWOLF_PHASE4_COMPLETE.md  DIREWOLF_PHASE5_COMPLETE.md  DIREWOLF_PHASE6_COMPLETE.md  DIREWOLF_PHASE7_UNREAL_COMPLETE.md  DIREWOLF_PHASE8_TESTING_COMPLETE.md  DIREWOLF_PHASE9_DOCUMENTATION_COMPLETE.md  DIREWOLF_PRODUCTION_READY.md  DIREWOLF_XAI_COMPLETE_GUIDE.md  DIREWOLF_XAI_INDEX.md  DIREWOLF_XAI_PHASE1_COMPLETE.md  DIREWOLF_XAI_PHASE2_COMPLETE.md  DIREWOLF_XAI_PRODUCTION_ROADMAP.md  DIREWOLF_XAI_PROJECT_STRUCTURE.md  DOCUMENTATION_INDEX.md  DQN_FEEDBACK_MECHANISM.md  DQN_MODEL_UPDATE_FLOW.md  (+71 more)
build_desktop/: ALL_BUILD.vcxproj  CMakeCache.txt  DIREWOLF_Desktop.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  direwolf.vcxproj  direwolf.vcxproj.filters  install_manifest.txt
deployment/: update_server.py
docs/: ANTIVIRUS_INTEGRATION_GUIDE.md  CHAPTERS_4_5_README.md  CROSS_PLATFORM_SANDBOX_ARCHITECTURE.md  Chapter_4_Design_Complete.md  Chapter_5_Implementation_Complete.md  DEPLOYMENT_GUIDE.md  DIREWOLF_QUICKSTART.md  FAQ.md  INSTALLATION_GUIDE.md  NIDPS_INTEGRATION_GUIDE.md  PHASE5_QUICK_REFERENCE.md  TROUBLESHOOTING.md  (+1 more)
src/DRL/: AttackPattern.cpp  CMakeLists.txt  DRLInference.cpp  DRLIntegrationExample.cpp  DRLOrchestrator.cpp  EnvironmentAdapter.cpp  ModelMetadata.cpp  ReplayBuffer.cpp  TelemetryData.cpp
(+225 files in other folders)
